# waxwing

./: CHANGELOG.md  cabal.project  waxwing.cabal
app/: AST.hs  Eval.hs  Main.hs  Parser.hs
examples/: fizzbuzz.ww
